--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@ canvas{width:100%;height:100%;display:block;}
 </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js"></script>
+<script src="https://unpkg.com/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
+<script src="https://unpkg.com/lz-string@1.4.4/libs/lz-string.min.js"></script>
 <script>
 
 /** =========================
@@ -1445,6 +1445,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
