--- a/index.html
+++ b/index.html
@@ -237,7 +237,13 @@ canvas{width:100%;height:100%;display:block;}
 const SUPABASE_URL = "https://ytzggylozlcgcaoaupwo.supabase.co";       // Settings → Data API → Project URL
 const SUPABASE_ANON_KEY = "sb_publishable_rZtoLYXkC53jwHycEzC2ZQ_RW82bspa"; // Settings → API Keys → Publishable key
 
-const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const SB = window.supabase || window.supabaseJs;
+if(!SB || !SB.createClient){
+  alert("Supabase 라이브러리 로드 실패(차단/오프라인). Ctrl+F5 해보고, 그래도 안되면 애드블록/보안프로그램 확인!");
+  throw new Error("Supabase SDK not loaded");
+}
+const supabase = SB.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
 
 // 짧은 ID 생성 (8~10자리)
 function makeId(len = 10){
@@ -1445,6 +1451,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
