--- a/index.html
+++ b/index.html
@@ -242,7 +242,9 @@ if(!SB || !SB.createClient){
   alert("Supabase 라이브러리 로드 실패(차단/오프라인). Ctrl+F5 해보고, 그래도 안되면 애드블록/보안프로그램 확인!");
   throw new Error("Supabase SDK not loaded");
 }
-const supabase = SB.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+window.supabaseClient = window.supabaseClient || SB.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const supabase = window.supabaseClient;
+
 
 
 // 짧은 ID 생성 (8~10자리)
@@ -1451,6 +1453,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
