--- a/index.html
+++ b/index.html
@@ -393,6 +393,55 @@ const els = {
 };
 
 function clamp(v,min,max){ return Math.max(min, Math.min(max, v)); }
+  function nextNodeId(){
+  const used = new Set(state.nodes.map(n => n.id));
+  let maxNum = 0;
+
+  for(const id of used){
+    const m = /^N(\d+)$/.exec(id);
+    if(m) maxNum = Math.max(maxNum, parseInt(m[1], 10));
+  }
+
+  let n = maxNum + 1;
+  while(used.has(`N${String(n).padStart(3,"0")}`)) n++;
+  return `N${String(n).padStart(3,"0")}`;
+}
+
+function dedupeNodeIds(){
+  const seen = new Set();
+
+  for(const node of state.nodes){
+    if(!node.id || typeof node.id !== "string"){
+      node.id = nextNodeId();
+    }
+    if(seen.has(node.id)){
+      const old = node.id;
+      const neu = nextNodeId();
+      node.id = neu;
+
+      if(state.lvl && old in state.lvl){
+        state.lvl[neu] = state.lvl[old];
+        delete state.lvl[old];
+      }else{
+        state.lvl[neu] = 0;
+      }
+
+      state.edges = state.edges.map(([p,c])=>[
+        p===old ? neu : p,
+        c===old ? neu : c
+      ]);
+
+      state.exclusives = (state.exclusives||[]).map(g=>{
+        const parent = (g.parent===old) ? neu : g.parent;
+        const group = Array.isArray(g.group) ? g.group.map(x=> x===old ? neu : x) : [];
+        return { parent, group };
+      });
+    }
+
+    seen.add(node.id);
+  }
+}
+
 // =========================
 // ✅ 숫자 캡슐(라벨) 그리기 유틸
 // =========================
@@ -450,7 +499,7 @@ function drawLabelCapsule(ctx, text, x, y, opt = {}){
 
   ctx.restore();
 }
-  
+
 function setSimLocked(on){
   state.simLocked = on;
 
@@ -620,6 +669,7 @@ state.children = [];
 // ✅ UI 입력값도 같이 갱신
 els.ownedSp.value = String(state.owned);
 if(!state.viewerMode) els.bgUrlInput.value = state.bgUrl || "";
+  dedupeNodeIds(); // ✅ 로드시 중복 ID 자동 정리
 
 
 }
@@ -1110,7 +1160,7 @@ cv.addEventListener("mouseup",(e)=>{
     }
 
     if(state.mode === "EDIT" && !state.viewerMode){
-      const id = `N${String(state.nodes.length+1).padStart(3,"0")}`;
+      const id = nextNodeId(); // ✅ 중복 없는 새 ID
       const newNode = {
         id,
         x: w.x,
@@ -1582,6 +1632,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
