--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ canvas{width:100%;height:100%;display:block;}
   <div class="card" style="min-width:420px">
     <div class="row" style="justify-content:flex-end; flex-wrap:wrap;">
       <a class="btnLink" href="https://creators.nexon.com/kr/s/pramochi%238535" target="_blank" rel="noopener noreferrer">강모찌후원등록</a>
+      <a class="btnLink" href="./board.html" target="_blank" rel="noopener noreferrer">게시판</a>
       
       <button id="toggleMode">시뮬레이터 보기</button>
       <button id="adminEdit">EDIT(관리자)</button>
@@ -111,6 +112,8 @@ canvas{width:100%;height:100%;display:block;}
 
       <button id="resetPoints">포인트 초기화</button>
       <button id="retrySimPwd" style="display:none">비밀번호 재입력</button>
+      <button id="postBoard">게시판에 공유</button>
+
     </div>
 
     <div class="muted small" id="shareInfo" style="margin-top:6px"></div>
@@ -389,6 +392,7 @@ const els = {
   json: document.getElementById("json"),
   copyJson: document.getElementById("copyJson"),
   loadJson: document.getElementById("loadJson"),
+    postBoard: document.getElementById("postBoard"),
   prereqMode: document.getElementById("prereqMode"),
 };
 
@@ -1332,6 +1336,57 @@ els.saveLinkBuild.addEventListener("click", async ()=>{
   }
   draw();
 });
+  // =========================
+// ✅ 게시판에 공유 (posts 테이블에 저장)
+// =========================
+async function createBoardPost(){
+  // ❗ 공유(뷰어) 모드에서는 게시판 등록 막기(원하면 풀어도 됨)
+  if(state.viewerMode){
+    alert("공유(SIM) 모드에서는 게시판 등록이 불가합니다. (관리자/편집 화면에서 등록하세요)");
+    return;
+  }
+
+  const nickname = prompt("닉네임을 입력해줘");
+  if(!nickname) return;
+
+  const title = prompt("제목을 입력해줘");
+  if(!title) return;
+
+  const job = prompt("직업/전승명을 입력해줘");
+  if(!job) return;
+
+  const desc = prompt("한줄 설명(없으면 그냥 확인)") || "";
+
+  try{
+    // 1) 현재 빌드 저장 → shares에 들어가고 shareId 생성
+    const payload = pack({ includeLvl: true });
+    const shareId = await saveToDB(payload);
+
+    // 2) 게시판 글 저장 → posts에 메타 정보 저장
+    const { error } = await sbClient
+      .from("posts")
+      .insert([{
+        nickname: nickname.trim(),
+        title: title.trim(),
+        job: job.trim(),
+        sp: Number(state.owned || 0),
+        desc: desc.trim(),
+        share_id: shareId
+      }]);
+
+    if(error) throw error;
+
+    alert("✅ 게시판 등록 완료!\n(게시판 페이지에서 확인할 수 있어)");
+  }catch(e){
+    console.error(e);
+    alert("❌ 게시판 등록 실패! (Supabase RLS/테이블 설정 확인 필요)");
+  }
+}
+
+if(els.postBoard){
+  els.postBoard.addEventListener("click", createBoardPost);
+}
+
 
 
 
@@ -1632,6 +1687,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
