--- a/index.html
+++ b/index.html
@@ -720,6 +720,7 @@ function setViewerMode(on){
     els.subtitle.textContent = "EDIT에서 배경/노드/라인 배치 → 링크 저장 → 공유자는 SIM만";
     els.shareInfo.textContent = "";
   }
+  if(els.postBoard) els.postBoard.style.display = on ? "inline-block" : "none";
 
   // ✅ 레이아웃 바뀌면 캔버스 실제 픽셀 크기부터 다시 맞춰야 클릭 좌표가 안 틀어짐
   resize();   // (resize 안에서 draw() 호출함)
@@ -1340,11 +1341,18 @@ els.saveLinkBuild.addEventListener("click", async ()=>{
 // ✅ 게시판에 공유 (posts 테이블에 저장)
 // =========================
 async function createBoardPost(){
-  // ❗ 공유(뷰어) 모드에서는 게시판 등록 막기(원하면 풀어도 됨)
-  if(state.viewerMode){
-    alert("공유(SIM) 모드에서는 게시판 등록이 불가합니다. (관리자/편집 화면에서 등록하세요)");
+  // ✅ EDIT(관리자/편집)에서는 등록 금지, 공유(SIM)에서만 등록 허용
+  if(!state.viewerMode){
+    alert("❌ 편집(EDIT) 모드에서는 게시판 등록이 불가합니다. 공유(SIM) 링크로 들어가서 등록해주세요.");
     return;
   }
+
+  // ✅ 공유모드라도 비번 잠금이면 등록 금지 (원하면 이 줄은 빼도 됨)
+  if(state.simLocked){
+    alert("🔒 비밀번호를 먼저 입력해야 게시판에 등록할 수 있어요. (비밀번호 재입력 버튼 누르기)");
+    return;
+  }
+
 
   const nickname = prompt("닉네임을 입력해줘");
   if(!nickname) return;
@@ -1687,6 +1695,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
