--- a/index.html
+++ b/index.html
@@ -229,6 +229,53 @@ canvas{width:100%;height:100%;display:block;}
 
 </div>
 </div>
+<!-- =========================
+     ✅ 게시판 등록 모달 UI (prompt 대체)
+     ========================= -->
+<div id="boardModalBackdrop" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,.55); z-index:9999;">
+  <div id="boardModal" style="max-width:520px; margin:8vh auto; background:#121a27; border:1px solid #23324a; border-radius:16px; padding:14px;">
+    <div class="row" style="justify-content:space-between; align-items:center;">
+      <div class="kpi" style="font-size:16px">게시판에 공유</div>
+      <button id="bmClose" style="padding:6px 10px">✕</button>
+    </div>
+
+    <div class="muted small" style="margin-top:6px">
+      닉네임/제목/직업을 한 번에 입력하고 등록할 수 있어요.
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="muted">닉네임</div>
+    <input id="bmNickname" placeholder="예) 강모찌" maxlength="20" style="width:100%">
+
+    <div class="muted" style="margin-top:10px">제목</div>
+    <input id="bmTitle" placeholder="예) PVP용 / 사냥용" maxlength="40" style="width:100%">
+
+    <div class="muted" style="margin-top:10px">직업</div>
+    <select id="bmJobSelect" style="width:100%">
+      <option value="">선택해줘</option>
+      <option value="심연추방자">심연추방자</option>
+      <option value="태양감시자">태양감시자</option>
+      <option value="향사수">향사수</option>
+      <option value="환영검사">환영검사</option>
+      <option value="집행관">집행관</option>
+      <option value="주문각인사">주문각인사</option>
+    </select>
+
+    <div class="muted" style="margin-top:10px">한줄 설명(선택)</div>
+    <textarea id="bmDesc" style="height:110px" placeholder="예) 보유 145P 기준, 분기 A 선택 빌드"></textarea>
+
+    <div class="row" style="justify-content:space-between; margin-top:10px">
+      <div class="muted small" id="bmState"></div>
+      <div class="row">
+        <button id="bmCancel">취소</button>
+        <button id="bmSubmit">등록</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+  
 
 <script src="https://unpkg.com/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
 <script src="https://unpkg.com/lz-string@1.4.4/libs/lz-string.min.js"></script>
@@ -1340,61 +1387,136 @@ els.saveLinkBuild.addEventListener("click", async ()=>{
   // =========================
 // ✅ 게시판에 공유 (posts 테이블에 저장)
 // =========================
-async function createBoardPost(){
-  // ✅ EDIT(관리자/편집)에서는 등록 금지, 공유(SIM)에서만 등록 허용
+// =========================
+// ✅ 게시판 모달 핸들러 (prompt 대체)
+// =========================
+const bm = {
+  backdrop: document.getElementById("boardModalBackdrop"),
+  modal: document.getElementById("boardModal"),
+  close: document.getElementById("bmClose"),
+  cancel: document.getElementById("bmCancel"),
+  submit: document.getElementById("bmSubmit"),
+  state: document.getElementById("bmState"),
+  nickname: document.getElementById("bmNickname"),
+  title: document.getElementById("bmTitle"),
+  job: document.getElementById("bmJobSelect"),
+  desc: document.getElementById("bmDesc"),
+};
+
+function bmSetState(msg="", type=""){
+  if(!bm.state) return;
+  bm.state.textContent = msg;
+  bm.state.style.color = (type === "err") ? "#ff6b6b" : "#9bb0d0";
+}
+
+
+function openBoardModal(){
+  // ✅ EDIT에서는 금지
   if(!state.viewerMode){
     alert("❌ 편집(EDIT) 모드에서는 게시판 등록이 불가합니다. 공유(SIM) 링크로 들어가서 등록해주세요.");
     return;
   }
-
-  // ✅ 공유모드라도 비번 잠금이면 등록 금지 (원하면 이 줄은 빼도 됨)
+  // ✅ 공유모드라도 비번 잠금이면 금지
   if(state.simLocked){
     alert("🔒 비밀번호를 먼저 입력해야 게시판에 등록할 수 있어요. (비밀번호 재입력 버튼 누르기)");
     return;
   }
 
+  // 입력 초기화(원하면 닉네임만 유지하도록 바꿔도 됨)
+  bm.nickname.value = "";
+  bm.title.value = "";
+  bm.job.value = "";
+  bm.desc.value = "";
+  bmSetState("");
 
-  const nickname = prompt("닉네임을 입력해줘");
-  if(!nickname) return;
+  bm.backdrop.style.display = "block";
+  bm.nickname.focus();
+}
 
-  const title = prompt("제목을 입력해줘");
-  if(!title) return;
+function closeBoardModal(){
+  bm.backdrop.style.display = "none";
+}
 
-  const job = prompt("직업/전승명을 입력해줘");
-  if(!job) return;
+async function submitBoardPost(){
+  const nickname = (bm.nickname.value || "").trim();
+  const title = (bm.title.value || "").trim();
+  const job = (bm.job.value || "").trim();
+  const desc = (bm.desc.value || "").trim();
 
-  const desc = prompt("한줄 설명(없으면 그냥 확인)") || "";
+  if(!nickname){ bmSetState("닉네임을 입력해줘.", "err"); bm.nickname.focus(); return; }
+  if(!title){ bmSetState("제목을 입력해줘.", "err"); bm.title.focus(); return; }
+  if(!job){ bmSetState("직업을 선택해줘.", "err"); bm.job.focus(); return; }
 
   try{
-    // 1) 현재 빌드 저장 → shares에 들어가고 shareId 생성
+    bmSetState("저장 중...", "");
+
+    // 1) 현재 빌드 저장 → shares
     const payload = pack({ includeLvl: true });
     const shareId = await saveToDB(payload);
 
-    // 2) 게시판 글 저장 → posts에 메타 정보 저장
+    // 2) posts 저장
     const { error } = await sbClient
       .from("posts")
       .insert([{
-        nickname: nickname.trim(),
-        title: title.trim(),
-        job: job.trim(),
+        nickname,
+        title,
+        job,
         sp: Number(state.owned || 0),
-        desc: desc.trim(),
+        desc,
         share_id: shareId
       }]);
 
     if(error) throw error;
 
+    bmSetState("✅ 등록 완료!", "");
     alert("✅ 게시판 등록 완료!\n(게시판 페이지에서 확인할 수 있어)");
+    closeBoardModal();
   }catch(e){
     console.error(e);
+    bmSetState("❌ 등록 실패! (Supabase RLS/테이블 설정 확인 필요)", "err");
     alert("❌ 게시판 등록 실패! (Supabase RLS/테이블 설정 확인 필요)");
   }
 }
 
+
 if(els.postBoard){
-  els.postBoard.addEventListener("click", createBoardPost);
+  els.postBoard.addEventListener("click", openBoardModal);
 }
 
+// 모달 이벤트(안전하게: 요소가 있을 때만 등록)
+if(bm.backdrop && bm.close && bm.cancel && bm.submit){
+  // 모달 닫기 동작
+  bm.close.addEventListener("click", closeBoardModal);
+  bm.cancel.addEventListener("click", closeBoardModal);
+
+  // 바깥(검은 배경) 클릭하면 닫기
+  bm.backdrop.addEventListener("mousedown", (e)=>{
+    if(e.target === bm.backdrop) closeBoardModal();
+  });
+
+  // 등록 버튼
+  bm.submit.addEventListener("click", submitBoardPost);
+
+  // Enter로 등록(textarea 제외)
+  [bm.nickname, bm.title].forEach(el=>{
+    if(!el) return;
+    el.addEventListener("keydown", (e)=>{
+      if(e.key === "Enter"){
+        e.preventDefault();
+        submitBoardPost();
+      }
+    });
+  });
+
+  // ESC로 닫기
+  document.addEventListener("keydown", (e)=>{
+    if(e.key === "Escape" && bm.backdrop.style.display === "block"){
+      closeBoardModal();
+    }
+  });
+}else{
+  console.warn("게시판 모달 요소(id) 중 일부를 찾지 못했습니다. HTML id 확인 필요", bm);
+}
 
 
 
@@ -1695,6 +1817,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
