--- a/index.html
+++ b/index.html
@@ -91,6 +91,28 @@ canvas{width:100%;height:100%;display:block;}
 .btnDanger:hover{
   border-color: rgba(255,77,77,0.95);
 }
+/* ✅ 관리자 컨트롤 박스 */
+.adminBox{
+  position:absolute;
+  top:14px;
+  right:14px;
+  display:flex;
+  gap:6px;
+  align-items:center;
+  padding:8px 10px;
+  border:1px solid var(--line);
+  border-radius:12px;
+  background:#0f1624;
+  opacity:.9;
+}
+
+.adminBox .title{
+  font-size:12px;
+  color:var(--muted);
+  margin-right:4px;
+}
+
+  
  
 /* 공유(뷰어) 모드에서 편집 UI 숨김 */
 .viewerOnlyHide{display:none !important;}
@@ -98,6 +120,13 @@ canvas{width:100%;height:100%;display:block;}
 </head>
 <body>
 <div class="wrap">
+  <!-- ✅ 관리자 전용 컨트롤 -->
+<div class="adminBox">
+  <span class="title">관리자</span>
+  <button id="toggleMode" class="btnGhost">시뮬레이터 보기</button>
+  <button id="adminEdit" class="btnGhost">EDIT</button>
+</div>
+
 
 <div class="top">
   <div class="card" style="flex:1;min-width:780px">
@@ -142,8 +171,7 @@ canvas{width:100%;height:100%;display:block;}
   <div class="divider"></div>
 
   <div class="menuGroup">
-    <button id="toggleMode">시뮬레이터 보기</button>
-    <button id="adminEdit" class="btnGhost">EDIT(관리자)</button>
+
   </div>
 
   <div class="divider"></div>
@@ -1865,6 +1893,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
