--- a/index.html
+++ b/index.html
@@ -350,6 +350,34 @@ canvas{width:100%;height:100%;display:block;}
     </div>
   </div>
 </div>
+<!-- =========================
+     ✅ SIM 비밀번호 입력 모달
+     ========================= -->
+<div id="simPwdBackdrop" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,.65); z-index:10000;">
+  <div id="simPwdModal" style="max-width:420px; margin:12vh auto; background:#121a27; border:1px solid #23324a; border-radius:16px; padding:14px;">
+    <div class="row" style="justify-content:space-between; align-items:center;">
+      <div class="kpi" style="font-size:16px">비밀번호 입력</div>
+      <button id="simPwdClose" style="padding:6px 10px">✕</button>
+    </div>
+
+    <div class="muted small" style="margin-top:8px">
+      강모찌 후원코드를 입력하면 잠금이 해제됩니다.
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="muted">비밀번호</div>
+    <input id="simPwdInput" type="password" placeholder="예) pramochi#8535" style="width:100%">
+
+    <div class="row" style="justify-content:space-between; margin-top:12px">
+      <div class="muted small" id="simPwdState"></div>
+      <div class="row">
+        <button id="simPwdCancel">취소</button>
+        <button id="simPwdSubmit" class="btnPrimary">확인</button>
+      </div>
+    </div>
+  </div>
+</div>
 
   
 
@@ -649,21 +677,9 @@ function setSimLocked(on){
 }
 
 function askSimPassword(){
-  const inputRaw = prompt("비밀번호는 강모찌 후원코드입니다");
-  if(inputRaw === null) return; // 취소
-  const input = String(inputRaw).trim(); // ✅ 공백 실수 방지
-
-  if(input !== SIM_PASSWORD){
-    alert("❌ 비밀번호가 틀렸습니다.");
-    setSimLocked(true);
-    draw();
-    return;
-  }
-  alert("✅ 잠금 해제 완료!");
-  state.simUnlockedOnce = true;
-  setSimLocked(false);
-  draw();
+  openSimPwdModal();
 }
+
 
 function resize(){
   const r = stage.getBoundingClientRect();
@@ -1478,6 +1494,82 @@ const bm = {
   job: document.getElementById("bmJobSelect"),
   desc: document.getElementById("bmDesc"),
 };
+// =========================
+// ✅ SIM 비밀번호 모달 핸들러 (prompt 대체)
+// =========================
+const spm = {
+  backdrop: document.getElementById("simPwdBackdrop"),
+  close: document.getElementById("simPwdClose"),
+  cancel: document.getElementById("simPwdCancel"),
+  submit: document.getElementById("simPwdSubmit"),
+  input: document.getElementById("simPwdInput"),
+  state: document.getElementById("simPwdState"),
+};
+
+function spmSetState(msg="", type=""){
+  if(!spm.state) return;
+  spm.state.textContent = msg;
+  spm.state.style.color = (type === "err") ? "#ff6b6b" : "#9bb0d0";
+}
+
+function openSimPwdModal(){
+  if(!spm.backdrop) return;
+  spm.input.value = "";
+  spmSetState("");
+  spm.backdrop.style.display = "block";
+  setTimeout(()=> spm.input.focus(), 0);
+}
+
+function closeSimPwdModal(){
+  if(!spm.backdrop) return;
+  spm.backdrop.style.display = "none";
+}
+
+function submitSimPwd(){
+  const input = String(spm.input.value || "").trim();
+
+  if(!input){
+    spmSetState("비밀번호를 입력해줘.", "err");
+    spm.input.focus();
+    return;
+  }
+
+  if(input !== SIM_PASSWORD){
+    spmSetState("❌ 비밀번호가 틀렸습니다.", "err");
+    setSimLocked(true);
+    draw();
+    spm.input.select();
+    return;
+  }
+
+  // 성공
+  spmSetState("✅ 잠금 해제 완료!", "");
+  state.simUnlockedOnce = true;
+  setSimLocked(false);
+  draw();
+  closeSimPwdModal();
+}
+
+// 이벤트 연결
+if(spm.backdrop && spm.close && spm.cancel && spm.submit && spm.input){
+  spm.close.addEventListener("click", closeSimPwdModal);
+  spm.cancel.addEventListener("click", closeSimPwdModal);
+  spm.submit.addEventListener("click", submitSimPwd);
+
+  spm.backdrop.addEventListener("mousedown", (e)=>{
+    if(e.target === spm.backdrop) closeSimPwdModal();
+  });
+
+  spm.input.addEventListener("keydown", (e)=>{
+    if(e.key === "Enter"){
+      e.preventDefault();
+      submitSimPwd();
+    }
+    if(e.key === "Escape"){
+      closeSimPwdModal();
+    }
+  });
+}
 
 function bmSetState(msg="", type=""){
   if(!bm.state) return;
@@ -1888,11 +1980,13 @@ els.loadJson.addEventListener("click", ()=>{
   draw();
 
   // 공유자면 처음 한번 비번 요청(자동 팝업 원하면 아래 주석 해제)
-  // if(state.viewerMode){ askSimPassword(); }
+  if(state.viewerMode){ askSimPassword(); }
+
 })();
 </script>
 </body>
 </html>
+
 
 
 
