--- a/index.html
+++ b/index.html
@@ -354,9 +354,18 @@ canvas{width:100%;height:100%;display:block;}
      ✅ SIM 비밀번호 입력 모달
      ========================= -->
 <div id="simPwdBackdrop" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,.65); z-index:10000;">
-  <div id="simPwdModal" style="max-width:420px; margin:12vh auto; background:#121a27; border:1px solid #23324a; border-radius:16px; padding:14px;">
+  <div id="simPwdModal" style="
+  max-width:720px;
+  margin:10vh auto;
+  background:#121a27;
+  border:1px solid #23324a;
+  border-radius:20px;
+  padding:22px 22px 18px;
+  box-shadow: 0 18px 60px rgba(0,0,0,.55);
+">
+
     <div class="row" style="justify-content:space-between; align-items:center;">
-      <div class="kpi" style="font-size:16px">비밀번호 입력</div>
+      <div class="kpi" style="font-size:22px">비밀번호 입력</div>
       <button id="simPwdClose" style="padding:6px 10px">✕</button>
     </div>
 
@@ -367,7 +376,13 @@ canvas{width:100%;height:100%;display:block;}
     <div class="hr"></div>
 
     <div class="muted">비밀번호</div>
-    <input id="simPwdInput" type="password" placeholder="예) pramochi#8535" style="width:100%">
+    <input id="simPwdInput" type="text" placeholder="예) pramochi#8535" style="
+  width:100%;
+  font-size:18px;
+  padding:14px 14px;
+  border-radius:14px;
+">
+
 
     <div class="row" style="justify-content:space-between; margin-top:12px">
       <div class="muted small" id="simPwdState"></div>
@@ -1989,6 +2004,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
