--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ canvas{width:100%;height:100%;display:block;}
 
   <div class="menuGroup">
     <a class="btnLink" href="https://creators.nexon.com/kr/s/pramochi%238535" target="_blank" rel="noopener noreferrer">강모찌후원등록</a>
-    <a class="btnLink" href="./board.html" target="_blank" rel="noopener noreferrer">게시판</a>
+    <a class="btnLink" href="./board.html" target="_blank" rel="noopener noreferrer">전승공유게시판</a>
   </div>
 
   <div class="divider"></div>
@@ -2004,6 +2004,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
