--- a/index.html
+++ b/index.html
@@ -111,6 +111,25 @@ canvas{width:100%;height:100%;display:block;}
   color:var(--muted);
   margin-right:4px;
 }
+.lockBanner{
+  position:absolute;
+  top:58px;               /* 상단 툴바 아래에 뜨게 */
+  left:12px;
+  right:12px;
+  z-index:20;
+
+  padding:12px 14px;
+  border-radius:14px;
+  border:1px solid rgba(255,77,77,0.45);
+  background:rgba(10,15,24,0.75);
+  backdrop-filter: blur(6px);
+
+  color:#ffd2d2;
+  font-size:14px;
+  line-height:1.35;
+  box-shadow: 0 8px 26px rgba(0,0,0,0.35);
+}
+.lockBanner b{ color:#ffffff; }
 
   
  
@@ -200,6 +219,10 @@ canvas{width:100%;height:100%;display:block;}
 
   <div class="card">
     <div class="stage" id="stage">
+     <div id="lockBanner" class="lockBanner" style="display:none">
+  🔒 비밀번호 입력 후 노드 조작이 가능합니다. (화면 이동/줌은 가능) · <b>비밀번호 입력</b> 버튼을 눌러주세요.
+</div>
+ 
       <div class="toolbar">
         <input id="bgUrlInput" class="editUI" placeholder="배경 이미지 URL 붙여넣기 (공유용)" style="width:320px">
         <input id="bgFile" class="editUI" type="file" accept="image/*">
@@ -560,6 +583,8 @@ const els = {
   loadJson: document.getElementById("loadJson"),
     postBoard: document.getElementById("postBoard"),
   prereqMode: document.getElementById("prereqMode"),
+  lockBanner: document.getElementById("lockBanner"),
+
 };
 
 function clamp(v,min,max){ return Math.max(min, Math.min(max, v)); }
@@ -672,6 +697,11 @@ function drawLabelCapsule(ctx, text, x, y, opt = {}){
 
 function setSimLocked(on){
   state.simLocked = on;
+    // ✅ 잠김 안내 배너 토글
+  if(els.lockBanner){
+    els.lockBanner.style.display = (on && state.viewerMode && state.mode === "SIM") ? "block" : "none";
+  }
+
 
   // 캔버스 흐림 토글
   stage.classList.toggle("simLocked", on);
@@ -1580,6 +1610,13 @@ if(spm.backdrop && spm.close && spm.cancel && spm.submit && spm.input){
     }
   });
 }
+  // ✅ 잠김 배너 클릭하면 비번 모달 열기
+if(els.lockBanner){
+  els.lockBanner.addEventListener("click", ()=>{
+    if(state.simLocked) askSimPassword();
+  });
+}
+
 
 function bmSetState(msg="", type=""){
   if(!bm.state) return;
@@ -1998,6 +2035,7 @@ els.loadJson.addEventListener("click", ()=>{
 </script>
 </body>
 </html>
+
 
 
 
