--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ canvas{width:100%;height:100%;display:block;}
     <div class="hr"></div>
 
     <div class="muted">비밀번호</div>
-    <input id="simPwdInput" type="text" placeholder="예) pramochi#8535" style="
+    <input id="simPwdInput" type="text" placeholder="답) pramochi#8535" style="
   width:100%;
   font-size:18px;
   padding:14px 14px;
@@ -2049,6 +2049,7 @@ else setSimLocked(false);
 </script>
 </body>
 </html>
+
 
 
 
