--- a/board.html
+++ b/board.html
@@ -112,17 +112,20 @@
 /* ✅ 전체 배경 이미지 (CSS 변수로 관리) */
 :root{
   --bgImage: url("https://github.com/pratlabf583-ui/skill-simulator/blob/main/lee.jpg?raw=true");
+  --bgX: 50%;
+  --bgY: 50%;
+  --bgZoom: 1;
 }
+
 
 body{
   background-image: var(--bgImage);
-  background-size: cover;          /* 화면 꽉 채우기 */
-  background-position: center;     /* 중앙 정렬 */
-  background-attachment: fixed;    /* 스크롤해도 고정 */
+  background-size: calc(100% * var(--bgZoom)) auto;
+  background-position: var(--bgX) var(--bgY);
+  background-attachment: fixed;
   background-repeat: no-repeat;
 }
 
-}
 
 /* ✅ 위에 올라가는 카드/박스는 살짝 반투명 */
 .card{
@@ -417,10 +420,102 @@ body{
         alert("✅ 기본 배경으로 복구했어.");
       });
     }
+        // ✅ 배경 위치/줌 저장 키
+    const POS_KEY = "board_bg_pos";
+    const ZOOM_KEY = "board_bg_zoom";
+
+    // ✅ 저장된 위치/줌 불러오기
+    const savedPos = localStorage.getItem(POS_KEY);
+    const savedZoom = localStorage.getItem(ZOOM_KEY);
+
+    if(savedZoom){
+      const z = Number(savedZoom);
+      if(!Number.isNaN(z)) document.documentElement.style.setProperty("--bgZoom", String(z));
+    }
+    if(savedPos){
+      try{
+        const obj = JSON.parse(savedPos);
+        if(obj && obj.x != null && obj.y != null){
+          document.documentElement.style.setProperty("--bgX", obj.x);
+          document.documentElement.style.setProperty("--bgY", obj.y);
+        }
+      }catch(e){}
+    }
+
+    // ✅ 드래그로 배경 위치 이동
+    let dragging = false;
+    let startX = 0, startY = 0;
+    let curX = getComputedStyle(document.documentElement).getPropertyValue("--bgX").trim() || "50%";
+    let curY = getComputedStyle(document.documentElement).getPropertyValue("--bgY").trim() || "50%";
+
+    // 현재값을 px로 만들기 (퍼센트면 0으로 시작)
+    function toPx(v){
+      v = String(v).trim();
+      if(v.endsWith("px")) return parseFloat(v) || 0;
+      return 0; // %면 드래그 시작시 0으로 두고 px로 전환
+    }
+
+    let baseX = toPx(curX);
+    let baseY = toPx(curY);
+
+    function savePos(x, y){
+      localStorage.setItem(POS_KEY, JSON.stringify({ x: `${x}px`, y: `${y}px` }));
+    }
+    function saveZoom(z){
+      localStorage.setItem(ZOOM_KEY, String(z));
+    }
+
+    // 드래그는 "빈 배경"에서만 하고 싶으면 body에 걸면 됨
+    // 카드에서 드래그하면 스크롤/텍스트 선택이 방해될 수 있어서,
+    // Alt키 누르고 드래그할 때만 작동하게 함.
+    document.addEventListener("mousedown", (e)=>{
+      if(!e.altKey) return;             // ✅ Alt + 드래그로만 이동
+      dragging = true;
+      startX = e.clientX;
+      startY = e.clientY;
+
+      // 드래그 시작 순간 현재 값을 기준으로
+      const sx = getComputedStyle(document.documentElement).getPropertyValue("--bgX").trim();
+      const sy = getComputedStyle(document.documentElement).getPropertyValue("--bgY").trim();
+      baseX = toPx(sx);
+      baseY = toPx(sy);
+
+      e.preventDefault();
+    });
+
+    document.addEventListener("mousemove", (e)=>{
+      if(!dragging) return;
+      const dx = e.clientX - startX;
+      const dy = e.clientY - startY;
+      const nx = baseX + dx;
+      const ny = baseY + dy;
+
+      document.documentElement.style.setProperty("--bgX", `${nx}px`);
+      document.documentElement.style.setProperty("--bgY", `${ny}px`);
+      savePos(nx, ny);
+    });
+
+    document.addEventListener("mouseup", ()=>{
+      dragging = false;
+    });
+
+    // ✅ 휠로 배경 확대/축소 (Alt + 휠)
+    document.addEventListener("wheel", (e)=>{
+      if(!e.altKey) return; // ✅ Alt + 휠일 때만
+      e.preventDefault();
+
+      const cur = Number(getComputedStyle(document.documentElement).getPropertyValue("--bgZoom")) || 1;
+      const delta = -Math.sign(e.deltaY);
+      const next = Math.min(3, Math.max(0.5, cur + delta * 0.08)); // 0.5x ~ 3x
+      document.documentElement.style.setProperty("--bgZoom", String(next));
+      saveZoom(next);
+    }, { passive:false });
+
   })();
 
 </script>
 </body>
 </html>
+
 
 
