--- a/board.html
+++ b/board.html
@@ -117,7 +117,6 @@
   --bgZoom: 1;
 }
 
-
 body{
   background-image: var(--bgImage);
   background-size: calc(100% * var(--bgZoom)) calc(100% * var(--bgZoom));
@@ -125,6 +124,7 @@ body{
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
+
 
 
 
@@ -372,6 +372,45 @@ body{
 
   // 시작
   loadPosts();
+  // ✅ 관리자 배경(전원 공통) 불러오기: site_config.key = 'board_bg'
+async function loadAdminBackground(){
+  const DEFAULT = {
+    url: "https://github.com/pratlabf583-ui/skill-simulator/blob/main/lee.jpg?raw=true",
+    x: "50%",
+    y: "50%",
+    zoom: 1
+  };
+
+  try{
+    const { data, error } = await sbClient
+      .from("site_config")
+      .select("value")
+      .eq("key", "board_bg")
+      .maybeSingle();
+
+    if(error) throw error;
+
+    const v = (data && data.value) ? data.value : DEFAULT;
+
+    const url = (v.url || DEFAULT.url).trim();
+    const x = (v.x || DEFAULT.x);
+    const y = (v.y || DEFAULT.y);
+    const zoom = Number(v.zoom ?? DEFAULT.zoom);
+
+    document.documentElement.style.setProperty("--bgImage", `url("${url}")`);
+    document.documentElement.style.setProperty("--bgX", x);
+    document.documentElement.style.setProperty("--bgY", y);
+    document.documentElement.style.setProperty("--bgZoom", String(Number.isFinite(zoom) ? zoom : 1));
+  }catch(e){
+    console.error("admin bg load fail:", e);
+    // 실패하면 CSS 기본값 그대로 사용
+  }
+}
+
+// 시작
+loadPosts();
+loadAdminBackground();
+
     /** =========================
    * ✅ 배경 이미지 URL localStorage 저장/불러오기
    * (board.html 전용)
@@ -524,6 +563,7 @@ body{
 </script>
 </body>
 </html>
+
 
 
 
