--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@ canvas{width:100%;height:100%;display:block;}
 .btnDanger:hover{
   border-color: rgba(255,77,77,0.95);
 }
-/* ✅ 관리자 컨트롤 박스 */
+/* ✅ 관리자 컨트롤 박스 (겹침 방지: absolute 제거) */
 .adminBox{
-  position:absolute;
-  top:14px;
-  right:14px;
+  position:static;          /* ✅ 중요: absolute 제거 */
+  margin-left:auto;         /* ✅ 오른쪽 정렬 */
   display:flex;
   gap:6px;
+  flex-wrap:wrap;           /* ✅ 화면 줄면 줄바꿈 */
   align-items:center;
   padding:8px 10px;
   border:1px solid var(--line);
@@ -105,6 +105,7 @@ canvas{width:100%;height:100%;display:block;}
   background:#0f1624;
   opacity:.9;
 }
+
 
 .adminBox .title{
   font-size:12px;
@@ -150,12 +151,21 @@ canvas{width:100%;height:100%;display:block;}
 <div class="top">
   <div class="card" style="flex:1;min-width:780px">
     <div class="row" style="justify-content:space-between">
-      <div>
-        <div class="kpi">프라시아 크리에이터 강모찌의 시뮬레이터</div>
-        <div class="muted" id="subtitle">EDIT에서 배경/노드/라인 배치 → 링크 저장 → 공유자는 SIM만</div>
-      </div>
-      <span class="badge" id="modeBadge">EDIT</span>
+  <div>
+    <div class="kpi">프라시아 크리에이터 강모찌의 시뮬레이터</div>
+    <div class="muted" id="subtitle">EDIT에서 배경/노드/라인 배치 → 링크 저장 → 공유자는 SIM만</div>
+  </div>
+
+  <div class="row" style="gap:10px; align-items:center; flex-wrap:wrap;">
+    <div class="adminBox">
+      <span class="title">관리자</span>
+      <button id="toggleMode" class="btnGhost">시뮬레이터 보기</button>
+      <button id="adminEdit" class="btnGhost">EDIT</button>
     </div>
+    <span class="badge" id="modeBadge">EDIT</span>
+  </div>
+</div>
+
 
     <div class="row" style="gap:18px;margin-top:10px">
       <div>
@@ -2049,6 +2059,7 @@ else setSimLocked(false);
 </script>
 </body>
 </html>
+
 
 
 
